Fixed invalid values on mobile devices.

--- a/src/components/Gallery/styles.module.css
+++ b/src/components/Gallery/styles.module.css
@@ -65,7 +65,8 @@
 .ribbon {
   /* https://www.freecodecamp.org/news/make-a-css-only-ribbon/ */
   position: absolute;
-  inset: 0 0 auto auto;
+  top: 0;
+  right: 0;
   background: black;
   box-shadow: 0 0 0 999px black;
   clip-path: inset(0 -100%);
